[SC-6616] fixed horizontal scroll

--- a/src/personal-finance/pages/accounts/accounts.component.less
+++ b/src/personal-finance/pages/accounts/accounts.component.less
@@ -132,7 +132,7 @@
             max-width: initial;
             position: absolute;
             left: 20%;
-            width: calc(100vw - (100vw - 100%)/2 - 20%);
+            width: calc(100vw - (100vw - 100%)/2 - 20% - 7px);
             height: 100%;
 
             @media all and (max-width: 1024px) {
